--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #000050;
+  --ifm-color-primary-dark: #000048;
+  --ifm-color-primary-darker: #000044;
+  --ifm-color-primary-darkest: #000038;
+  --ifm-color-primary-light: #000058;
+  --ifm-color-primary-lighter: #00005c;
+  --ifm-color-primary-lightest: #000068;
   --ifm-code-font-size: 95%;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #2efec1;
+  --ifm-color-primary-dark: #10feb8;
+  --ifm-color-primary-darker: #01feb4;
+  --ifm-color-primary-darkest: #01d194;
+  --ifm-color-primary-light: #4cfeca;
+  --ifm-color-primary-lighter: #5bfece;
+  --ifm-color-primary-lightest: #88fedc;
 }
 
 .docusaurus-highlight-code-line {
